fix header and filters z-index

--- a/sprint4-frontend/src/assets/styles/cmps/_AppHeaderFilter.scss
+++ b/sprint4-frontend/src/assets/styles/cmps/_AppHeaderFilter.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-auto-flow: column;
     max-width: 100%;
-    z-index: 5;
+    z-index: 4;
     background-color: #fff;
     grid-column: 1 / -1;
     box-shadow: 0 0 #ccc;
